[package]
name = "pingtest"
version = "0.2.0"
edition = "2021"
description = "High-performance multi-target ping tool | Powered by byff"
authors = ["byff"]
license = "MIT"

[[bin]]
name = "pingTest"
path = "src/main.rs"

[dependencies]
# GUI - glow only (faster startup than wgpu)
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["syntect"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }

# Ping (raw ICMP)
surge-ping = "0.8"
socket2 = "0.5"

# Excel
calamine = "0.26"
rust_xlsxwriter = "0.79"

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Network utils
ipnetwork = "0.20"

# DNS resolve
dns-lookup = "2"

# File dialog
rfd = "0.15"

# Logging
tracing = "0.1"

# Misc
chrono = "0.4"
parking_lot = "0.12"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
